added partial javascript

--- a/registeredofficestable.html
+++ b/registeredofficestable.html
@@ -1,8 +1,39 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+      <meta charset='utf-8' />
+      <title>Temporary Activities</title>
+      <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
+
+      <style>
+        table.sortable thead {
+            background-color:#eee;
+            color:#000000;
+            font-weight: bold;
+            font-size: 16px;
+            cursor: default;
+        }
+        table.sortable {
+      		font-size: 12px;
+      		font-family: Arial, Helvetica, sans-serif;
+      	}
+        table.sortable {border-spacing: 0}
+        table.sortable td, th {padding: 0 0.2em}
+        tr:nth-child(even) {background: #eeeeee}
+        tr:nth-child(odd) {background: #FFF}
+      </style>
+  </head>
+
+  <body>
 
 
 
-<table class="tableizer-table">
+
+<table class="sortable">
+<!–– add your tableizer data below this line––>
+
+
 <thead><tr class="tableizer-firstrow"><th>Organization Name</th><th>Organization Name (Chinese)</th><th>Organization Origin</th><th>Field of Work</th><th>Professional Supervisory Unit</th><th>Registration Location</th><th>Date of Registration</th><th>Permitted Area(s) of Operation</th></tr></thead><tbody>
  <tr><td>Advanced Medical Technology Association (AdvaMed)</td><td>先进医疗技术协会</td><td>United States</td><td>Trade</td><td>Shanghai Municipal Commission of Commerce</td><td>Shanghai</td><td>2017-04-10</td><td>Shanghai, Beijing, Tianjin, Hebei, Liaoning, Jiangsu, Zhejiang, Fujian, Shandong, Henan, Hubei, Hunan, Guandong, Hainan, Chongqing, Sichuan, Yunnan, Shaanxi, Qinghai</td></tr>
  <tr><td>AITEX</td><td>西班牙纺织行业研究协会</td><td>Spain</td><td>Trade</td><td>Shanghai Municipal Commission of Commerce</td><td>Shanghai</td><td>2017-04-10</td><td>Shanghai, Jiangsu, Zhejiang, Shandong, Guangdong</td></tr>
