finished adding javascript

--- a/registeredofficestable.html
+++ b/registeredofficestable.html
@@ -105,3 +105,8 @@
  <tr><td>Zhang Xueliang Foundation</td><td>张学良基金会</td><td>Hong Kong</td><td>Poverty Alleviation, Youth, Aging, Disaster Relief, Arts and Culture, Education, International Relations/Exchange</td><td>Guangdong Province Department of Civil Affairs</td><td>Guangdong</td><td>2017-04-11</td><td>Guangdong</td></tr>
  <tr><td>World Vision</td><td>世界宣明会－中国基金有限公司</td><td>Hong Kong</td><td>Labor and Migrants, Youth, Disaster Relief, Poverty Alleviation, Civil Society Capacity-Building</td><td>Jiangxi Province Department of Civil Affairs</td><td>Jiangxi</td><td>2017-04-19</td><td>Jiangxi</td></tr>
 </tbody></table>
+
+    
+    <!–– add your tableizer data above this line––>
+</body>
+</html>
