--- a/index_maptest.html
+++ b/index_maptest.html
@@ -344,7 +344,7 @@
           ]
         },
         "properties": {
-          "orgname_en": "China-Britain Business Council",
+          "orgname_en": "China-Britain Business Council (Changsha)",
           "orgname_ch": "英中贸易协会",
           "psu_en": "Hunan Province Department of Commerce",
           "originloc": "United Kingdom",
@@ -365,7 +365,7 @@
           ]
         },
         "properties": {
-          "orgname_en": "China-Britain Business Council",
+          "orgname_en": "China-Britain Business Council (Jiangsu)",
           "orgname_ch": "英中贸易协会",
           "psu_en": "Jiangsu Department of Commerce",
           "originloc": "United Kingdom",
