--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -315,6 +316,46 @@
           "website_ch": "https://cedarfund.org/"
         }
       },
+          {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            106.511024, 29.510259
+          ]
+        },
+        "properties": {
+          "orgname_en": "Charity Aid Service Company",
+          "orgname_ch": "澳大利亚慈善救助服务公司",
+          "psu_en": "Chonqing City Civil Affairs Bureau",
+          "originloc": "Australia",
+          "sector": "Disabilities, Youth, Health, Civil Society Capacity-Building",
+          "regloc": "Chongqing",
+          "regdate": "April 24, 2017",
+          "actarea": "Chongqing, Yunnan"
+        }
+      }, 
+       {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            112.994806, 28.195200
+          ]
+        },
+        "properties": {
+          "orgname_en": "China-Britain Business Council (Changsha)",
+          "orgname_ch": "英中贸易协会",
+          "psu_en": "Hunan Province Department of Commerce",
+          "originloc": "United Kingdom",
+          "sector": "Trade",
+          "regloc": "Changsha",
+          "regdate": "April 27, 2017",
+          "actarea": "Hunan",
+          "website_en": "http://www.cbbc.org/",
+          "website_ch": "http://www.chinaoutbound.org/"
+        }
+      },
       {
         "type": "Feature",
         "geometry": {
@@ -324,7 +365,7 @@
           ]
         },
         "properties": {
-          "orgname_en": "China-Britain Business Council",
+          "orgname_en": "China-Britain Business Council (Jiangsu)",
           "orgname_ch": "英中贸易协会",
           "psu_en": "Jiangsu Department of Commerce",
           "originloc": "United Kingdom",
@@ -563,6 +604,7 @@
         }
       },
       
+
       {
         "type": "Feature",
         "geometry": {
@@ -604,6 +646,26 @@
           "actarea": "Guangdong",
           "website_en": "https://www.industryhk.org/en/",
           "website_ch": "https://www.industryhk.org/sc/"
+        }
+      },
+      {
+        "type": "Feature",
+        "geometry": {
+          "type": "Point",
+          "coordinates": [
+            116.439257, 39.895311
+          ]
+        },
+        "properties": {
+          "orgname_en": "Fédération Internationale de Volleyball",
+          "orgname_ch": "国际排球联合会",
+          "psu_en": "General Administration of Sport",
+          "originloc": "Switzerland",
+          "sector": "International Relations/Exchange, Sports",
+          "regloc": "Beijing",
+          "regdate": "April 26, 2017",
+          "actarea": "China",
+          "website_en": "http://www.fivb.com/en/"
         }
       },
       {
