--- a/index_registeredofficestable.html
+++ b/index_registeredofficestable.html
@@ -7,6 +7,7 @@
       <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
       <style>
+
         table.sortable thead {
             background-color:#eee;
             color:#000000;
@@ -14,14 +15,17 @@
             font-size: 16px;
             cursor: default;
         }
+
         table.sortable {
       		font-size: 12px;
       		font-family: Arial, Helvetica, sans-serif;
       	}
+
         table.sortable {border-spacing: 0}
         table.sortable td, th {padding: 0 0.2em}
         tr:nth-child(even) {background: #eeeeee}
         tr:nth-child(odd) {background: #FFF}
+
       </style>
   </head>
 
@@ -33,8 +37,9 @@
 <table class="sortable">
 <!–– add your tableizer data below this line––>
 
-
-<thead><tr class="tableizer-firstrow"><th>Organization Name</th><th>Organization Name (Chinese)</th><th>Organization Origin</th><th>Field of Work</th><th>Professional Supervisory Unit</th><th>Registration Location</th><th>Date of Registration</th><th>Permitted Area(s) of Operation</th></tr></thead><tbody>
+  
+ 
+<thead><tr class="tableizer-firstrow"><th>Organization Name</th><th>Organization Name (Chinese)</th><th>Organization Origin</th><th>Field of Work</th><th>Professional Supervisory Unity</th><th>Registration Location</th><th>Date of Registration</th><th>Area(s) of Operation</th></tr></thead><tbody>
  <tr><td>Advanced Medical Technology Association (AdvaMed)</td><td>先进医疗技术协会</td><td>United States</td><td>Trade</td><td>Shanghai Municipal Commission of Commerce</td><td>Shanghai</td><td>2017-04-10</td><td>Shanghai, Beijing, Tianjin, Hebei, Liaoning, Jiangsu, Zhejiang, Fujian, Shandong, Henan, Hubei, Hunan, Guandong, Hainan, Chongqing, Sichuan, Yunnan, Shaanxi, Qinghai</td></tr>
  <tr><td>AITEX</td><td>西班牙纺织行业研究协会</td><td>Spain</td><td>Trade</td><td>Shanghai Municipal Commission of Commerce</td><td>Shanghai</td><td>2017-04-10</td><td>Shanghai, Jiangsu, Zhejiang, Shandong, Guangdong</td></tr>
  <tr><td>Bill and Melinda Gates Foundation</td><td>比尔及梅琳达·盖茨基金会</td><td>United States</td><td>Health</td><td>National Health and Family Planning Commission</td><td>Beijing</td><td>2017-01-23</td><td>China</td></tr>
@@ -43,7 +48,7 @@
  <tr><td>CEDAR Fund</td><td>国际施达有限公司</td><td>Hong Kong</td><td>Health, Disaster Relief</td><td>Yunnan Province Health and Family Planning Commission</td><td>Yunnan</td><td>2017-04-10</td><td>Yunnan</td></tr>
  <tr><td>China Kind Fund</td><td>中华爱心基金会</td><td>Hong Kong</td><td>Ethnic Affairs</td><td>State Ethnic Affairs Commission</td><td>Beijing</td><td>2017-01-23</td><td>China</td></tr>
  <tr><td>China Medical Board</td><td>美国中华医学基金会</td><td>United States</td><td>Health, Education</td><td>National Health and Family Planning Commission</td><td>Beijing</td><td>2017-01-23</td><td>China</td></tr>
- <tr><td>China-Britain Business Council</td><td>英中贸易协会</td><td>United Kingdom</td><td>Trade</td><td>Jiangsu Department of Commerce</td><td>Jiangsu</td><td>2017-04-10</td><td>Jiangsu</td></tr>
+ <tr><td>China-Britain Business Council (Jiangsu)</td><td>英中贸易协会</td><td>United Kingdom</td><td>Trade</td><td>Jiangsu Department of Commerce</td><td>Jiangsu</td><td>2017-04-10</td><td>Jiangsu</td></tr>
  <tr><td>Chinese Children Charities</td><td>中华孤残儿童基金会</td><td>United States</td><td>Youth, Disabilities, Education, Disaster Relief</td><td>Ministry of Civil Affairs</td><td>Beijing</td><td>2017-01-23</td><td>China</td></tr>
  <tr><td>Chinese General Chamber of Commerce </td><td>香港中华总商会</td><td>Hong Kong</td><td>Trade</td><td>Guangdong Department of Commerce</td><td>Beijing</td><td>2017-01-19</td><td>Guangdong, Beijing, Shanghai, Tianjin, Chongqing, Guangxi, Fujian, Guangxi, Hainan, Hunan, Sichuan, Yunnan, Guizhou, Jiangsu, Zhejiang, Hubei, Liaoning</td></tr>
  <tr><td>Chinese Manufacturers' Association of Hong Kong</td><td>香港中华厂商联合会</td><td>Hong Kong</td><td>Trade</td><td>Guangdong Department of Commerce</td><td>Guangdong</td><td>2017-01-19</td><td>Guangdong </td></tr>
@@ -104,9 +109,12 @@
  <tr><td>Doctor Sun Yat-Sen Bo Ai Foundation Limited</td><td>孙中山博爱基金会有限公司</td><td>Hong Kong</td><td>Arts and Culture</td><td>Guangdong Province Department of Civil Affairs</td><td>Guangdong</td><td>2017-04-11</td><td>Guangdong, Jiangsu, Beijing</td></tr>
  <tr><td>Zhang Xueliang Foundation</td><td>张学良基金会</td><td>Hong Kong</td><td>Poverty Alleviation, Youth, Aging, Disaster Relief, Arts and Culture, Education, International Relations/Exchange</td><td>Guangdong Province Department of Civil Affairs</td><td>Guangdong</td><td>2017-04-11</td><td>Guangdong</td></tr>
  <tr><td>World Vision</td><td>世界宣明会－中国基金有限公司</td><td>Hong Kong</td><td>Labor and Migrants, Youth, Disaster Relief, Poverty Alleviation, Civil Society Capacity-Building</td><td>Jiangxi Province Department of Civil Affairs</td><td>Jiangxi</td><td>2017-04-19</td><td>Jiangxi</td></tr>
+ <tr><td>Charity Aid Service Company</td><td>澳大利亚慈善救助服务公司</td><td>Australia</td><td>Disabilities, Youth, Health, Civil Society Capacity-Building</td><td>Chonqing City Civil Affairs Bureau</td><td>Chongqing</td><td>2017-04-24</td><td>Chongqing, Yunnan</td></tr>
+ <tr><td>Fédération Internationale de Volleyball</td><td>国际排球联合会</td><td>Switzerland</td><td>International Relations/Exchange, Sports</td><td>General Administration of Sport</td><td>Beijing</td><td>2017-04-26</td><td>China</td></tr>
+ <tr><td>China-Britain Business Council (Changsha)</td><td>英中贸易协会</td><td>United Kingdom</td><td>Trade</td><td>Hunan Province Department of Commerce</td><td>Changsha</td><td>2017-04-27</td><td>Hunan</td></tr>
 </tbody></table>
-
     
-    <!–– add your tableizer data above this line––>
+    
+<!–– add your tableizer data above this line––>
 </body>
 </html>
