--- a/index_registeredofficestable.html
+++ b/index_registeredofficestable.html
@@ -39,7 +39,7 @@
 
   
  
-<thead><tr class="tableizer-firstrow"><th>Organization Name</th><th>Organization Name (Chinese)</th><th>Organization Origin</th><th>Field of Work</th><th>Professional Supervisory Unity</th><th>Registration Location</th><th>Date of Registration</th><th>Area(s) of Operation</th></tr></thead><tbody>
+<thead><tr class="tableizer-firstrow"><th>Organization Name</th><th>Organization Name (Chinese)</th><th>Organization Origin</th><th>Field of Work</th><th>Professional Supervisory Unit</th><th>Registration Location</th><th>Date of Registration</th><th>Area(s) of Operation</th></tr></thead><tbody>
  <tr><td>Advanced Medical Technology Association (AdvaMed)</td><td>先进医疗技术协会</td><td>United States</td><td>Trade</td><td>Shanghai Municipal Commission of Commerce</td><td>Shanghai</td><td>2017-04-10</td><td>Shanghai, Beijing, Tianjin, Hebei, Liaoning, Jiangsu, Zhejiang, Fujian, Shandong, Henan, Hubei, Hunan, Guandong, Hainan, Chongqing, Sichuan, Yunnan, Shaanxi, Qinghai</td></tr>
  <tr><td>AITEX</td><td>西班牙纺织行业研究协会</td><td>Spain</td><td>Trade</td><td>Shanghai Municipal Commission of Commerce</td><td>Shanghai</td><td>2017-04-10</td><td>Shanghai, Jiangsu, Zhejiang, Shandong, Guangdong</td></tr>
  <tr><td>Bill and Melinda Gates Foundation</td><td>比尔及梅琳达·盖茨基金会</td><td>United States</td><td>Health</td><td>National Health and Family Planning Commission</td><td>Beijing</td><td>2017-01-23</td><td>China</td></tr>
