--- a/index_psu.html
+++ b/index_psu.html
@@ -34,32 +34,32 @@
 
   
 
-<thead><tr class="tableizer-firstrow"><th>Professional Supervisory Unit</th><th>Chinese Name</th><th>Number of Organizations Sponsored</th><th>Registration Location</th><th>Field of Work</th></tr></thead><tbody>
+<thead><tr class="tableizer-firstrow"><th>Professional Supervisory Unit</th><th>Chinese Name</th><th>Number of Organizations Sponsored</th><th>Registration Location(s)</th><th>Field of Work</th></tr></thead><tbody>
  <tr><td>Beijing Municipal Commission of Commerce</td><td>北京市商务委员会</td><td>2</td><td>Beijing</td><td>Trade</td></tr>
  <tr><td>Chonqing City Civil Affairs Bureau</td><td>重庆市民政局</td><td>1</td><td>Chongqing</td><td>Disabilities, Youth, Health, Civil Society Capacity-Building</td></tr>
  <tr><td>Gansu Province Health and Family Planning Commission</td><td>甘肃省卫生和计划生育委员会</td><td>1</td><td>Gansu</td><td>Health, Poverty Alleviation, Disaster Relief</td></tr>
  <tr><td>General Administration of Sport</td><td>国家体育总局</td><td>1</td><td>Beijing</td><td>International Relations/Exchange, Sports</td></tr>
- <tr><td>Guangdong Department of Commerce</td><td>广东省商务厅</td><td>6</td><td>Guangdong</td><td>Trade</td></tr>
- <tr><td>Guangdong Province Department of Civil Affairs</td><td>广东省民政厅</td><td>3</td><td>Guangdong</td><td>Labor and Migrants, Youth, Disaster Relief, Education, Civil Society Capacity-Building</td></tr>
+ <tr><td>Guangdong Department of Commerce</td><td>广东省商务厅</td><td>6</td><td>Guangdong</td><td>Trade, Economic Development</td></tr>
+ <tr><td>Guangdong Province Department of Civil Affairs</td><td>广东省民政厅</td><td>3</td><td>Guangdong</td><td>Labor and Migrants, Youth, Disaster Relief, Education, Civil Society Capacity-Building, Poverty Alleviation, Aging, Disaster Relief, Arts and Culture, International Relations/Exchange</td></tr>
  <tr><td>Guizhou Province Department of Civil Affairs</td><td>贵州省民政厅</td><td>1</td><td>Guizhou</td><td>Disaster Relief, Civil Society Capacity-Building, Youth, Labor and Migrants</td></tr>
  <tr><td>Hunan Province Department of Commerce</td><td>湖南省商务厅</td><td>1</td><td>Changsha</td><td>Trade</td></tr>
  <tr><td>Jiangsu Department of Commerce</td><td>江苏省商务厅</td><td>2</td><td>Jiangsu</td><td>Trade</td></tr>
  <tr><td>Jiangxi Province Department of Civil Affairs</td><td>江西省民政厅</td><td>1</td><td>Jiangxi</td><td>Labor and Migrants, Youth, Disaster Relief, Poverty Alleviation, Civil Society Capacity-Building</td></tr>
- <tr><td>Ministry of Civil Affairs</td><td>民政部</td><td>11</td><td>Beijing</td><td>Youth, Disabilities, Education, Disaster Relief</td></tr>
+ <tr><td>Ministry of Civil Affairs</td><td>民政部</td><td>11</td><td>Beijing, Guangdong</td><td>Youth, Disabilities, Education, Disaster Relief, Health, International Relations/Exchange, Arts and Culture, Poverty Alleviation, Civil Society Capacity-Building, Environment</td></tr>
  <tr><td>National Copyright Administration</td><td>国家版权局</td><td>1</td><td>Beijing</td><td>Trade</td></tr>
- <tr><td>National Development and Reform Commission</td><td>国家发展和改革委员会</td><td>3</td><td>Beijing</td><td>Energy, Environment</td></tr>
- <tr><td>National Health and Family Planning Commission</td><td>国家卫生和计划生育委员会</td><td>5</td><td>Beijing</td><td>Health</td></tr>
+ <tr><td>National Development and Reform Commission</td><td>国家发展和改革委员会</td><td>3</td><td>Beijing</td><td>Economic Development, Environment, International Relations/Exchange, Energy</td></tr>
+ <tr><td>National Health and Family Planning Commission</td><td>国家卫生和计划生育委员会</td><td>5</td><td>Beijing</td><td>Health, Education</td></tr>
  <tr><td>Shanghai Health and Family Planning Commission</td><td>上海市卫生和计划生育委员会</td><td>1</td><td>Shanghai</td><td>Health, Poverty Alleviation, Disaster Relief</td></tr>
  <tr><td>Shanghai Municipal Commission of Commerce</td><td>上海市商务委员会</td><td>12</td><td>Shanghai</td><td>Trade</td></tr>
  <tr><td>Sichuan Health and Family Planning Commission</td><td>四川省卫生和计划生育委员会</td><td>1</td><td>Sichuan</td><td>Health, Education, Poverty Alleviation, Disaster Relief</td></tr>
  <tr><td>Sichuan Province Poverty Alleviation and Immigration Bureau</td><td>四川省扶贫和移民工作局</td><td>1</td><td>Sichuan</td><td>Rural Issues/Development, Women's Issues, Poverty Alleviation, Economic Development, Health, Environment, Education</td></tr>
  <tr><td>State Administration of Grain</td><td>国家粮食局</td><td>3</td><td>Beijing</td><td>Trade</td></tr>
- <tr><td>State Council Overseas Chinese Affairs Office</td><td>国务院侨务办公室</td><td>3</td><td>Jiangsu</td><td>Education</td></tr>
+ <tr><td>State Council Overseas Chinese Affairs Office</td><td>国务院侨务办公室</td><td>3</td><td>Beijing, Jiangsu, Shanghai</td><td>Education, Youth, Health, Infrastructure</td></tr>
  <tr><td>State Ethnic Affairs Commission</td><td>国家民族事务委员会</td><td>1</td><td>Beijing</td><td>Ethnic Affairs</td></tr>
  <tr><td>State Forestry Administration</td><td>国家林业局</td><td>2</td><td>Beijing</td><td>Environment</td></tr>
  <tr><td>Yunnan Office of Poverty Alleviation and Development</td><td>云南省扶贫开发办公室</td><td>2</td><td>Yunnan</td><td>Rural Issues/Development, Youth, Education, Health, Environment, Poverty Alleviation, Disaster Relief</td></tr>
  <tr><td>Yunnan Province Forestry Department</td><td>云南省林业厅</td><td>1</td><td>Yunnan</td><td>Animal Protection, Environment</td></tr>
- <tr><td>Yunnan Province Health and Family Planning Commission</td><td>云南省卫生和计划生育委员会</td><td>6</td><td>Yunnan</td><td>Health</td></tr>
+ <tr><td>Yunnan Province Health and Family Planning Commission</td><td>云南省卫生和计划生育委员会</td><td>6</td><td>Yunnan</td><td>Health, Education, Poverty Alleviation, Disaster Relief</td></tr>
 </tbody></table>
     
     
