--- a/index.html
+++ b/index.html
@@ -233,6 +233,27 @@
         }
       },
       {
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+      117.687912, 39.012825
+    ]
+  },
+  "properties": {
+    "orgname_en": "American International Chamber of Commerce",
+    "orgname_ch": "美国国际商会",
+    "psu_en": "Tianjin Commission of Commerce",
+    "originloc": "United States",
+    "sector": "Trade",
+    "regloc": "Tianjin",
+    "regdate": "May 12, 2017",
+    "actarea": "Tianjin",
+    "website_en": "https://aiccus.org/",
+    "website_ch": "https://aicc.org.cn/"
+  }
+},
+      {
         "type": "Feature",
         "geometry": {
           "type": "Point",
