--- a/index.html
+++ b/index.html
@@ -356,6 +356,27 @@
           "actarea": "Chongqing, Yunnan"
         }
       }, 
+      
+      {
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+      114.269676, 30.595263
+    ]
+  },
+  "properties": {
+    "orgname_en": "Cheongju Trade Union Discussion Forum",
+    "orgname_ch": "韩国清州商工会议所",
+    "psu_en": "Hubei Provincial Department of Commerce",
+    "originloc": "South Korea",
+    "sector": "Trade",
+    "regloc": "Hubei",
+    "regdate": "May 16, 2017",
+    "actarea": "Hubei"
+  }
+},
+      
        {
         "type": "Feature",
         "geometry": {
