--- a/index.html
+++ b/index.html
@@ -377,6 +377,26 @@
   }
 },
       
+      {
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+      117.400532, 39.115467
+    ]
+  },
+  "properties": {
+    "orgname_en": "China Cable Chamber of Commerce",
+    "orgname_ch": "中国光电线缆商会",
+    "psu_en": "Tianjin Commission of Commerce",
+    "originloc": "Hong Kong",
+    "sector": "Trade",
+    "regloc": "Tianjin",
+    "regdate": "May 12, 2017",
+    "actarea": "Tianjin"
+  }
+},
+      
        {
         "type": "Feature",
         "geometry": {
