--- a/index.html
+++ b/index.html
@@ -890,6 +890,28 @@
           "website_ch": "http://www.hppchina.org.cn/"
         }
       },
+      
+      {
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+      109.566813, 28.698664
+    ]
+  },
+  "properties": {
+    "orgname_en": "Institute for Integrated Rural Development",
+    "orgname_ch": "香港沃土發展社",
+    "psu_en": "Hunan Province Department of Education",
+    "originloc": "Hong Kong",
+    "sector": "Education, Youth, Rural Issues/Development",
+    "regloc": "Hunan",
+    "regdate": "May 16, 2017",
+    "actarea": "Hunan",
+    "website_en": "http://www.harvest.org.hk/eng/harvest/",
+    "website_ch": "http://www.harvest.org.hk/chi/"
+  }
+},
       {
         "type": "Feature",
         "geometry": {
