--- a/index.html
+++ b/index.html
@@ -1013,6 +1013,28 @@
         }
       },
       {
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+      114.423690, 30.545601
+    ]
+  },
+  "properties": {
+    "orgname_en": "International Plant Nutrition Institute",
+    "orgname_ch": "国际植物营养研究所",
+    "psu_en": "Department of Agriculture of Hubei",
+    "originloc": "Canada",
+    "sector": "Agriculture",
+    "regloc": "Hubei",
+    "regdate": "May 15, 2017",
+    "actarea": "Hubei, Hunan, Anhui, Jiangxi, Jiangsu, Zhejiang, Fujian, Shanghai",
+    "website_en": "https://ipni.net/",
+    "website_ch": "http://www.ipni.ac.cn/ipni/home/index.html"
+  }
+},
+      
+      {
         "type": "Feature",
         "geometry": {
           "type": "Point",
