--- a/index.html
+++ b/index.html
@@ -1077,6 +1077,27 @@
         }
       },
       {
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+      117.222949, 39.112891
+    ]
+  },
+  "properties": {
+    "orgname_en": "Japan Kobe International Cooperation and Exchange Center",
+    "orgname_ch": "日本神户国际合作交流中心",
+    "psu_en": "Tianjin Commission of Commerce",
+    "originloc": "Japan",
+    "sector": "International Relations/Exchange, Trade",
+    "regloc": "Tianjin",
+    "regdate": "May 12, 2017",
+    "actarea": "Tianjin",
+    "website_ch": "http://www.tj-kobe.org/zh/"
+  }
+},
+      
+      {
         "type": "Feature",
         "geometry": {
           "type": "Point",
