--- a/index.html
+++ b/index.html
@@ -1126,7 +1126,7 @@
           ]
         },
         "properties": {
-          "orgname_en": "Korea International Trade Association",
+          "orgname_en": "Korea International Trade Association (Beijing)",
           "orgname_ch": "韩国贸易协会",
           "psu_en": "Beijing Municipal Commission of Commerce",
           "originloc": "South Korea",
@@ -1138,6 +1138,27 @@
           "website_ch": "http://bj.kita.net/global_pk/cl/index.jsp"
         }
       },
+      {
+  "type": "Feature",
+  "geometry": {
+    "type": "Point",
+    "coordinates": [
+      121.404911, 31.202523
+    ]
+  },
+  "properties": {
+    "orgname_en": "Korea International Trade Association (Shanghai)",
+    "orgname_ch": "韩国贸易协会",
+    "psu_en": "Shanghai Municipal Commission of Commerce",
+    "originloc": "South Korea",
+    "sector": "Trade",
+    "regloc": "Shanghai",
+    "regdate": "May 11, 2017",
+    "actarea": "Hubei, Jiangxi, Hainan, Fujian, Jiangsu, Shanghai, Zhejiang, Hunan, Guangdong, Anhui",
+    "website_en": "www.kita.org"
+  }
+},
+      
       {
         "type": "Feature",
         "geometry": {
