--- a/index.html
+++ b/index.html
@@ -1367,7 +1367,7 @@
     "sector": "Education, Youth",
     "regloc": "Hunan",
     "regdate": "May 16, 2017",
-    "actarea": "Hunan"
+    "actarea": "Hunan",
     "website_ch": "http://www.readingdreams.com"
   }
 },
