--- a/index_tabletest.html
+++ b/index_tabletest.html
@@ -24,7 +24,7 @@
 
         table.sortable {border-spacing: 0}
         table.sortable td, th {padding: 0 0.2em}
-        tr:nth-child(even) {background: #eeeeee}
+        tr:nth-child(even) {background: #999999}
         tr:nth-child(odd) {background: #FFF}
 
       </style>
