--- a/index_tabletest.html
+++ b/index_tabletest.html
@@ -19,7 +19,7 @@
 
         table.sortable {
       		font-size: 12px;
-      		font-family: Druk;
+      		font-family: Arial, Helvetica, sans-serif;
       	}
 
         table.sortable {border-spacing: 0}
