--- a/index_maptest.html
+++ b/index_maptest.html
@@ -52,7 +52,7 @@
           text-decoration:none;
         }
         a:hover {
-          color:#101010;
+          color:#000000;
         }
         .heading {
           background:#fff;
@@ -75,7 +75,7 @@
         .listings .item:last-child { border-bottom:none; }
         .listings .item .title {
           display:block;
-          color:#700b0b;
+          color:#ff0032;
           font-weight:700;
         }
         .listings .item .title small { font-weight:400; }
