--- a/index_maptest.html
+++ b/index_maptest.html
@@ -82,7 +82,7 @@
         .listings .item.active .title,
         .listings .item .title:hover { color:#df1616; }
         .listings .item.active {
-          background-color:#f8f8f8;
+          background-color:#e6e6e6;
         }
         ::-webkit-scrollbar {
           width:3px;
@@ -94,7 +94,7 @@
           background:none;
         }
         ::-webkit-scrollbar-thumb {
-          background:#700b0b;
+          background:#ff0032;
           border-radius:0;
         }
         .marker {
@@ -128,7 +128,7 @@
           padding:1%;
         }
         .mapboxgl-popup-content h3 {
-          background:#df1616;
+          background:#ff0032;
           color:#fff;
           margin:0;
           display:block;
@@ -154,7 +154,7 @@
           margin-top: 15px;
         }
         .mapboxgl-popup-anchor-top > .mapboxgl-popup-tip {
-          border-bottom-color: #91c949;
+          border-bottom-color: #ffffff;
         }
       </style>
   </head>
