--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
       <style>
         body {
-          color:#404040;
+          color:#3c3c3c;
           font:400 15px/22px 'Source Sans Pro', 'Helvetica Neue', Sans-serif;
           margin:0;
           padding:0;
@@ -48,11 +48,11 @@
           padding: 20px 2px;
         }
         a {
-          color:#404040;
+          color:#3c3c3c;
           text-decoration:none;
         }
         a:hover {
-          color:#101010;
+          color:#000000;
         }
         .heading {
           background:#fff;
