--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         }
         .heading {
           background:#fff;
-          border-bottom:1px solid #eee;
+          border-bottom:1px solid #e6e6e6;
           min-height:60px;
           line-height:60px;
           padding:0 10px;
@@ -68,7 +68,7 @@
         }
         .listings .item {
           display:block;
-          border-bottom:1px solid #eee;
+          border-bottom:1px solid #e6e6e6;
           padding:0px;
           text-decoration:none;
         }
