--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         }
         .listings .item .title small { font-weight:400; }
         .listings .item.active .title,
-        .listings .item .title:hover { color:#df1616; }
+        .listings .item .title:hover { color:#ff1e32; }
         .listings .item.active {
           background-color:#f8f8f8;
         }
@@ -128,7 +128,7 @@
           padding:1%;
         }
         .mapboxgl-popup-content h3 {
-          background:#df1616;
+          background:#ff1e32;
           color:#fff;
           margin:0;
           display:block;
