--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         .listings .item.active .title,
         .listings .item .title:hover { color:#ff1e32; }
         .listings .item.active {
-          background-color:#f8f8f8;
+          background-color:#e6e6e6;
         }
         ::-webkit-scrollbar {
           width:3px;
@@ -154,7 +154,7 @@
           margin-top: 15px;
         }
         .mapboxgl-popup-anchor-top > .mapboxgl-popup-tip {
-          border-bottom-color: #91c949;
+          border-bottom-color: #ffffff;
         }
       </style>
   </head>
