--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         .listings .item:last-child { border-bottom:none; }
         .listings .item .title {
           display:block;
-          color:#700b0b;
+          color:#555555;
           font-weight:700;
         }
         .listings .item .title small { font-weight:400; }
@@ -94,7 +94,7 @@
           background:none;
         }
         ::-webkit-scrollbar-thumb {
-          background:#700b0b;
+          background:#555555;
           border-radius:0;
         }
         .marker {
