--- a/index_psu.html
+++ b/index_psu.html
@@ -5,7 +5,7 @@
       <title>Temporary Activities</title>
       <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
-      <style>
+<style>
         table.sortable thead {
             background-color:#eee;
             color:#000000;
@@ -18,8 +18,8 @@
       		font-family: Arial, Helvetica, sans-serif;
       	}
         table.sortable {border-spacing: 0}
-        table.sortable td, th {padding: 0 0.2em}
-        tr:nth-child(even) {background: #eeeeee}
+        table.sortable td, th {padding: 0 0.3em}
+        tr:nth-child(even) {background: #e6e6e6}
         tr:nth-child(odd) {background: #FFF}
       </style>
   </head>
