--- a/index.html
+++ b/index.html
@@ -1203,7 +1203,25 @@
     "website_en": "www.kita.org"
   }
 },
-      
+      {
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [
+116.477810, 39.990603
+]
+},
+"properties": {
+"orgname_en": "Korean Copyright Commission",
+"orgname_ch": "韩国著作权委员会",
+"psu_en": "State Administration of Press, Publication, Radio, Film, and Television (National Copyright Administration)",
+"originloc": "South Korea",
+"sector": "Trade",
+"regloc": "Beijing",
+"regdate": "May 31, 2017",
+"actarea": "China"
+}
+},
 
       
 
