--- a/index.html
+++ b/index.html
@@ -1241,7 +1241,7 @@
 "regloc": "Sichuan",
 "regdate": "May 27, 2017",
 "actarea": "Sichuan",
-"http://www.theleprosyproject.org/"
+"website_en": "http://www.theleprosyproject.org/"
 }
 },
 
