--- a/index.html
+++ b/index.html
@@ -1566,6 +1566,29 @@
         }
       },
       {
+"type": "Feature",
+"geometry": {
+"type": "Point",
+"coordinates": [
+108.909926, 34.246388
+]
+},
+"properties": {
+"orgname_en": "Silk Road Chamber of International Commerce",
+"orgname_ch": "丝绸之路国际总商会",
+"psu_en": "Shaanxi Department of Commerce",
+"originloc": "Hong Kong",
+"sector": "Trade, Arts and Culture, International Relations/Exchange",
+"regloc": "Shaanxi",
+"regdate": "May 31, 2017",
+"actarea": "Zhejiang, Heilongjiang, Shanghai, Hunan, Hebei, Yunnan, Guangdong, Anhui, Ningxia, Hubei, Shandong, Jiangxi, Qinghai, Xinjiang, Shaanxi, Xinjiang Bingtuan, Guizhou, Jilin, Chongqing, Tianjing, Liaoning, Shanxi, Henan, Inner Mongolia, Hainan, Sichuan, Fujian, Gansu, Tibet, Guangxi, Jiangsu",
+"website_en": "http://www.srcic.com/"
+}
+},
+
+      
+      
+      {
         "type": "Feature",
         "geometry": {
           "type": "Point",
