--- a/index.html
+++ b/index.html
@@ -406,12 +406,12 @@
           ]
         },
         "properties": {
-          "orgname_en": "China-Britain Business Council (Changsha)",
+          "orgname_en": "China-Britain Business Council (Hunan)",
           "orgname_ch": "英中贸易协会",
           "psu_en": "Hunan Province Department of Commerce",
           "originloc": "United Kingdom",
           "sector": "Trade",
-          "regloc": "Changsha",
+          "regloc": "Hunan",
           "regdate": "April 27, 2017",
           "actarea": "Hunan",
           "website_en": "http://www.cbbc.org/",
