--- a/index_registeredofficestable.html
+++ b/index_registeredofficestable.html
@@ -3,7 +3,7 @@
 <html>
   <head>
       <meta charset='utf-8' />
-      <title>Temporary Activities</title>
+      <title>Registered Offices</title>
       <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
  <style>
