--- a/index_psu.html
+++ b/index_psu.html
@@ -40,7 +40,7 @@
  <tr><td>Gansu Province Health and Family Planning Commission</td><td>甘肃省卫生和计划生育委员会</td><td>1</td><td>Gansu</td><td>Health, Poverty Alleviation, Disaster Relief</td></tr>
  <tr><td>General Administration of Sport</td><td>国家体育总局</td><td>1</td><td>Beijing</td><td>International Relations/Exchange, Sports</td></tr>
  <tr><td>Guangdong Province Department of Civil Affairs</td><td>广东省民政厅</td><td>3</td><td>Guangdong</td><td>Arts and Culture, Labor and Migrants, Youth, Disaster Relief, Education, Civil Society Capacity-Building, Poverty Alleviation, Aging, International Relations/Exchange</td></tr>
- <tr><td>Guangxi Department of Civil Affairs</td><td>"广西壮族自治区民政厅</td><td>"</td><td>1</td><td>Guangxi</td><td>Youth, Disaster Relief</td></tr>
+ <tr><td>Guangxi Department of Civil Affairs</td><td>广西壮族自治区民政厅</td><td>1</td><td>Guangxi</td><td>Youth, Disaster Relief</td></tr>
  <tr><td>Guizhou Province Department of Civil Affairs</td><td>贵州省民政厅</td><td>1</td><td>Guizhou</td><td>Disaster Relief, Civil Society Capacity-Building, Youth, Labor and Migrants</td></tr>
  <tr><td>Hubei Provincial Department of Commerce</td><td>湖北省商务厅</td><td>1</td><td>Hubei</td><td>Trade</td></tr>
  <tr><td>Hunan Province Department of Commerce</td><td>湖南省商务厅</td><td>1</td><td>Changsha</td><td>Trade</td></tr>
@@ -52,7 +52,7 @@
  <tr><td>National Copyright Administration</td><td>国家版权局</td><td>2</td><td>Beijing</td><td>Trade</td></tr>
  <tr><td>National Development and Reform Commission</td><td>国家发展和改革委员会</td><td>3</td><td>Beijing</td><td>Energy, Environment, Economic Development, International Relations/Exchange</td></tr>
  <tr><td>National Health and Family Planning Commission</td><td>国家卫生和计划生育委员会</td><td>5</td><td>Beijing</td><td>Health, Education</td></tr>
- <tr><td>Shaanxi Department of Commerce</td><td>"陕西省商务厅</td><td>"</td><td>1</td><td>Shaanxi</td><td>Trade, Arts and Culture, International Relations/Exchange</td></tr>
+ <tr><td>Shaanxi Department of Commerce</td><td>陕西省商务厅</td><td>1</td><td>Shaanxi</td><td>Trade, Arts and Culture, International Relations/Exchange</td></tr>
  <tr><td>Shaanxi Department of Education</td><td>陕西省教育厅</td><td>1</td><td>Shaanxi</td><td>Education</td></tr>
  <tr><td>Shandong Province Health and Family Planning Commission</td><td>山东省卫生计生委员会</td><td>1</td><td>Shandong</td><td>Health, International Relations/Exchange</td></tr>
  <tr><td>Shanghai Health and Family Planning Commission</td><td>上海市卫生和计划生育委员会</td><td>1</td><td>Shanghai</td><td>Health, Poverty Alleviation, Disaster Relief</td></tr>
