--- a/index_EligiblePSUs2017.html
+++ b/index_EligiblePSUs2017.html
@@ -2,7 +2,7 @@
 <html>
   <head>
       <meta charset='utf-8' />
-      <title>Temporary Activities</title>
+      <title>Eligible PSUs 2017</title>
       <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
       <style>
