--- a/index_shieh2.html
+++ b/index_shieh2.html
@@ -32,8 +32,8 @@
 <table class="sortable">
 <!–– add your tableizer data below this line––>
 
-<thead><tr class="tableizer-firstrow"><th></th><th>Development</th><th>Education/</th><th>Econ/</th><th>Sci/</th><th>Think Tanks</th><th>Total</th></tr></thead><tbody>
- <tr><td>&nbsp;</td><td>&nbsp;</td><td>Culture</td><td>Trade</td><td>Tech</td><td>&nbsp;</td><td>&nbsp;</td></tr>
+<thead><tr class="tableizer-firstrow"><th></th><th>Development</th><th>Education/Culture</th><th>Econ/Trade</th><th>Sci/Tech</th><th>Think Tanks</th><th>Total</th></tr></thead><tbody>
+ <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td></tr>
  <tr><td>Beijing</td><td>18</td><td>2</td><td>7</td><td>&nbsp;</td><td>1</td><td>28</td></tr>
  <tr><td>Guangdong</td><td>3</td><td>2</td><td>5</td><td>&nbsp;</td><td>&nbsp;</td><td>10</td></tr>
  <tr><td>Shanghai</td><td>2</td><td>&nbsp;</td><td>11</td><td>1</td><td>&nbsp;</td><td>14</td></tr>
