--- a/index_shieh3.html
+++ b/index_shieh3.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html>
+  <head>
+      <meta charset='utf-8' />
+      <title>Table 3: Number of Registered Foreign NGO Representative Offices, by Country/Territory</title>
+      <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
+<style>
+        table.sortable thead {
+            background-color:#eee;
+            color:#000000;
+            font-weight: bold;
+            font-size: 16px;
+            cursor: default;
+        }
+        table.sortable {
+      		font-size: 12px;
+      		font-family: Arial, Helvetica, sans-serif;
+      	}
+        table.sortable {border-spacing: 0}
+        table.sortable td, th {padding: 0 0.3em}
+        tr:nth-child(even) {background: #e6e6e6}
+        tr:nth-child(odd) {background: #FFF}
+      </style>
+  </head>
+
+  <body>
+
+
+
+
+<table class="sortable">
+<!–– add your tableizer data below this line––>
+
+<thead><tr class="tableizer-firstrow"><th></th><th>Beijing</th><th>Guangdong</th><th>Shanghai</th><th>Yunnan</th><th>Sichuan</th><th>Jiangsu</th><th>Gansu</th><th>Guizhou</th><th>Jiangxi</th><th>Total</th></tr></thead><tbody>
+ <tr><td>U.S.</td><td>16</td><td>&nbsp;</td><td>9</td><td>2</td><td>&nbsp;</td><td>1</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>28</td></tr>
+ <tr><td>Hong Kong/Macau</td><td>5</td><td>7</td><td>1</td><td>4</td><td>1</td><td>&nbsp;</td><td>&nbsp;</td><td>1</td><td>1</td><td>20</td></tr>
+ <tr><td>U.K.</td><td>1</td><td>&nbsp;</td><td>&nbsp;</td><td>1</td><td>1</td><td>1</td><td>1</td><td>&nbsp;</td><td>&nbsp;</td><td>5</td></tr>
+ <tr><td>France</td><td>2</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>2</td></tr>
+ <tr><td>S. Korea</td><td>1</td><td>1</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>2</td></tr>
+ <tr><td>Switzerland</td><td>1</td><td>&nbsp;</td><td>&nbsp;</td><td>1</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>2</td></tr>
+ <tr><td>Germany</td><td>2</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>2</td></tr>
+ <tr><td>Taiwan</td><td>&nbsp;</td><td>1</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>1</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>2</td></tr>
+ <tr><td>Spain</td><td>&nbsp;</td><td>&nbsp;</td><td>1</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>1</td></tr>
+ <tr><td>Australia</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>1</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>1</td></tr>
+ <tr><td>Japan</td><td>&nbsp;</td><td>1</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>1</td></tr>
+ <tr><td>Canada</td><td>&nbsp;</td><td>&nbsp;</td><td>1</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>1</td></tr>
+ <tr><td>India</td><td>&nbsp;</td><td>&nbsp;</td><td>1</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>1</td></tr>
+ <tr><td>Russia</td><td>&nbsp;</td><td>&nbsp;</td><td>1</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>1</td></tr>
+ <tr><td>Total</td><td>28</td><td>10</td><td>14</td><td>9</td><td>2</td><td>3</td><td>1</td><td>1</td><td>1</td><td>69</td></tr>
+</tbody></table>
+
+
+<!–– add your tableizer data above this line––>
+</body>
+</html>
