--- a/index_notapsu.html
+++ b/index_notapsu.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="./d3.v3.min.js"></script>
-<script src="./SpotMatrix1.js"></script>
+<script src="/d3.v3.min.js"></script>
+<script src="/SpotMatrix1.js"></script>
 
 <style>
 
