--- a/index_psu.html
+++ b/index_psu.html
@@ -33,21 +33,24 @@
 <!–– add your tableizer data below this line––>
 
 
-<thead><tr class="tableizer-firstrow"><th>Professional Supervisory Unit</th><th>Chinese Name</th><th>Number of Organizations Sponsored</th><th>Registration Location</th><th>Field of Work</th></tr></thead><tbody>
- <tr><td>Beijing Municipal Commission of Commerce</td><td>北京市商务委员会</td><td>2</td><td>Beijing</td><td>Trade</td></tr>
- <tr><td>Chonqing City Civil Affairs Bureau</td><td>重庆市民政局</td><td>1</td><td>Chongqing</td><td>Disabilities, Youth, Health, Civil Society Capacity-Building</td></tr>
- <tr><td>Department of Agriculture of Hubei</td><td>湖北省农业厅</td><td>1</td><td>Hubei</td><td>Agriculture</td></tr>
- <tr><td>Gansu Province Health and Family Planning Commission</td><td>甘肃省卫生和计划生育委员会</td><td>1</td><td>Gansu</td><td>Health, Poverty Alleviation, Disaster Relief</td></tr>
+<thead><tr class="tableizer-firstrow"><th>Professional Supervisory Unit</th><th>Chinese Name</th><th>Number of Organizations Sponsored</th><th>Registration Location</th><th>NGOs' Field of Work</th></tr></thead><tbody>
+ <tr><td>Beijing Commission of Commerce</td><td>北京市商务委员会</td><td>3</td><td>Beijing</td><td>Trade</td></tr>
+ <tr><td>Chonqing Bureau of Civil Affairs</td><td>重庆市民政局</td><td>1</td><td>Chongqing</td><td>Disabilities, Youth, Health, Civil Society Capacity-Building</td></tr>
+ <tr><td>Gansu Department of Education</td><td>甘肃省教育厅</td><td>1</td><td>Gansu</td><td>Youth, Education</td></tr>
+ <tr><td>Gansu Health and Family Planning Commission</td><td>甘肃省卫生和计划生育委员会</td><td>1</td><td>Gansu</td><td>Health, Poverty Alleviation, Disaster Relief</td></tr>
  <tr><td>General Administration of Sport</td><td>国家体育总局</td><td>1</td><td>Beijing</td><td>International Relations/Exchange, Sports</td></tr>
- <tr><td>Guangdong Province Department of Civil Affairs</td><td>广东省民政厅</td><td>3</td><td>Guangdong</td><td>Arts and Culture, Labor and Migrants, Youth, Disaster Relief, Education, Civil Society Capacity-Building, Poverty Alleviation, Aging, International Relations/Exchange</td></tr>
+ <tr><td>Guangdong Department of Civil Affairs</td><td>广东省民政厅</td><td>4</td><td>Guangdong</td><td>Arts and Culture, Labor and Migrants, Youth, Disaster Relief, Education, Civil Society Capacity-Building, Poverty Alleviation, Aging, International Relations/Exchange</td></tr>
+ <tr><td>Guangdong Department of Commerce</td><td>广东省商务厅</td><td>6</td><td>Guangdong</td><td>Trade, Economic Development</td></tr>
  <tr><td>Guangxi Department of Civil Affairs</td><td>广西壮族自治区民政厅</td><td>1</td><td>Guangxi</td><td>Youth, Disaster Relief</td></tr>
  <tr><td>Guizhou Province Department of Civil Affairs</td><td>贵州省民政厅</td><td>1</td><td>Guizhou</td><td>Disaster Relief, Civil Society Capacity-Building, Youth, Labor and Migrants</td></tr>
+ <tr><td>Heilongjiang Department of Commerce</td><td>"黑龙江省商务厅</td><td>"</td><td>1</td><td>Heilongjiang</td><td>Trade, Tourism, Technology, Economic Development</td></tr>
+ <tr><td>Hubei Department of Agriculture</td><td>湖北省农业厅</td><td>1</td><td>Hubei</td><td>Agriculture</td></tr>
  <tr><td>Hubei Provincial Department of Commerce</td><td>湖北省商务厅</td><td>1</td><td>Hubei</td><td>Trade</td></tr>
  <tr><td>Hunan Province Department of Commerce</td><td>湖南省商务厅</td><td>1</td><td>Changsha</td><td>Trade</td></tr>
  <tr><td>Hunan Province Department of Education</td><td>湖南省教育厅</td><td>2</td><td>Hunan</td><td>Education, Youth, Rural Issues/Development</td></tr>
  <tr><td>Jiangsu Department of Commerce</td><td>江苏省商务厅</td><td>2</td><td>Jiangsu</td><td>Trade</td></tr>
  <tr><td>Jiangxi Province Department of Civil Affairs</td><td>江西省民政厅</td><td>1</td><td>Jiangxi</td><td>Labor and Migrants, Youth, Disaster Relief, Poverty Alleviation, Civil Society Capacity-Building</td></tr>
- <tr><td>Liaoning Department of Commerce</td><td>辽宁省商务厅</td><td>2</td><td>Liaoning</td><td>Trade</td></tr>
+ <tr><td>Liaoning Department of Commerce</td><td>辽宁省商务厅</td><td>4</td><td>Liaoning</td><td>Trade, Economic Development</td></tr>
  <tr><td>Ministry of Civil Affairs</td><td>民政部</td><td>11</td><td>Beijing, Guangdong</td><td>Youth, Disabilities, Education, Disaster Relief, Health, International Relations/Exchange, Arts and Culture, Poverty Alleviation, Civil Society Capacity-Building, Environment</td></tr>
  <tr><td>National Copyright Administration</td><td>国家版权局</td><td>2</td><td>Beijing</td><td>Trade</td></tr>
  <tr><td>National Development and Reform Commission</td><td>国家发展和改革委员会</td><td>3</td><td>Beijing</td><td>Energy, Environment, Economic Development, International Relations/Exchange</td></tr>
@@ -55,20 +58,20 @@
  <tr><td>Shaanxi Department of Commerce</td><td>陕西省商务厅</td><td>1</td><td>Shaanxi</td><td>Trade, Arts and Culture, International Relations/Exchange</td></tr>
  <tr><td>Shaanxi Department of Education</td><td>陕西省教育厅</td><td>1</td><td>Shaanxi</td><td>Education</td></tr>
  <tr><td>Shandong Province Health and Family Planning Commission</td><td>山东省卫生计生委员会</td><td>1</td><td>Shandong</td><td>Health, International Relations/Exchange</td></tr>
+ <tr><td>Shanghai Commission of Commerce</td><td>上海市商务委员会</td><td>13</td><td>Shanghai</td><td>Trade</td></tr>
  <tr><td>Shanghai Health and Family Planning Commission</td><td>上海市卫生和计划生育委员会</td><td>1</td><td>Shanghai</td><td>Health, Poverty Alleviation, Disaster Relief</td></tr>
- <tr><td>Shanghai Municipal Commission of Commerce</td><td>上海市商务委员会</td><td>13</td><td>Shanghai</td><td>Trade</td></tr>
  <tr><td>Sichuan Health and Family Planning Commission</td><td>四川省卫生和计划生育委员会</td><td>2</td><td>Sichuan</td><td>Health, Education, Poverty Alleviation, Disaster Relief, Youth, Infrastructure</td></tr>
- <tr><td>Sichuan Province Poverty Alleviation and Immigration Bureau</td><td>四川省扶贫和移民工作局</td><td>1</td><td>Sichuan</td><td>Rural Issues/Development, Women's Issues, Poverty Alleviation, Economic Development, Health, Environment, Education</td></tr>
+ <tr><td>Sichuan Poverty Alleviation and Immigration Bureau</td><td>四川省扶贫和移民工作局</td><td>1</td><td>Sichuan</td><td>Rural Issues/Development, Women's Issues, Poverty Alleviation, Economic Development, Health, Environment, Education</td></tr>
  <tr><td>State Administration of Grain</td><td>国家粮食局</td><td>3</td><td>Beijing</td><td>Trade</td></tr>
  <tr><td>State Council Overseas Chinese Affairs Office</td><td>国务院侨务办公室</td><td>3</td><td>Jiangsu, Beijing, Shanghai</td><td>Education, Youth, Health, Infrastructure</td></tr>
  <tr><td>State Ethnic Affairs Commission</td><td>国家民族事务委员会</td><td>1</td><td>Beijing</td><td>Ethnic Affairs</td></tr>
  <tr><td>State Forestry Administration</td><td>国家林业局</td><td>2</td><td>Beijing</td><td>Environment</td></tr>
- <tr><td>The Guangdong Department of Commerce</td><td>广东省商务厅</td><td>6</td><td>Guangdong</td><td>Trade, Economic Development</td></tr>
  <tr><td>Tianjin Commission of Commerce</td><td>天津市商务委</td><td>3</td><td>Tianjin</td><td>Trade, International Relations/Exchange</td></tr>
  <tr><td>Tianjin Department of Civil Affairs</td><td>天津市民政局</td><td>2</td><td>Tianjin</td><td>Youth, Disabilities, Education, Poverty Alleviation, Disaster Relief, Labor and Migrants</td></tr>
+ <tr><td>Tibet Health and Family Planning Commission</td><td>西藏自治区卫计委</td><td>1</td><td>Tibet</td><td>Health, Ethnic Affairs</td></tr>
+ <tr><td>Yunnan Forestry Department</td><td>云南省林业厅</td><td>1</td><td>Yunnan</td><td>Animal Protection, Environment</td></tr>
+ <tr><td>Yunnan Health and Family Planning Commission</td><td>云南省卫生和计划生育委员会</td><td>6</td><td>Yunnan</td><td>Health, Education, Poverty Alleviation, Disaster Relief</td></tr>
  <tr><td>Yunnan Office of Poverty Alleviation and Development</td><td>云南省扶贫开发办公室</td><td>2</td><td>Yunnan</td><td>Rural Issues/Development, Youth, Education, Health, Environment, Poverty Alleviation, Disaster Relief</td></tr>
- <tr><td>Yunnan Province Forestry Department</td><td>云南省林业厅</td><td>1</td><td>Yunnan</td><td>Animal Protection, Environment</td></tr>
- <tr><td>Yunnan Province Health and Family Planning Commission</td><td>云南省卫生和计划生育委员会</td><td>6</td><td>Yunnan</td><td>Health, Education, Poverty Alleviation, Disaster Relief</td></tr>
 </tbody></table>
     
 <!–– add your tableizer data above this line––>
