--- a/index_psu.html
+++ b/index_psu.html
@@ -43,7 +43,7 @@
  <tr><td>Guangdong Department of Commerce</td><td>广东省商务厅</td><td>6</td><td>Guangdong</td><td>Trade, Economic Development</td></tr>
  <tr><td>Guangxi Department of Civil Affairs</td><td>广西壮族自治区民政厅</td><td>1</td><td>Guangxi</td><td>Youth, Disaster Relief</td></tr>
  <tr><td>Guizhou Province Department of Civil Affairs</td><td>贵州省民政厅</td><td>1</td><td>Guizhou</td><td>Disaster Relief, Civil Society Capacity-Building, Youth, Labor and Migrants</td></tr>
- <tr><td>Heilongjiang Department of Commerce</td><td>"黑龙江省商务厅</td><td>"</td><td>1</td><td>Heilongjiang</td><td>Trade, Tourism, Technology, Economic Development</td></tr>
+ <tr><td>Heilongjiang Department of Commerce</td><td>黑龙江省商务厅</td><td>1</td><td>Heilongjiang</td><td>Trade, Tourism, Technology, Economic Development</td></tr>
  <tr><td>Hubei Department of Agriculture</td><td>湖北省农业厅</td><td>1</td><td>Hubei</td><td>Agriculture</td></tr>
  <tr><td>Hubei Provincial Department of Commerce</td><td>湖北省商务厅</td><td>1</td><td>Hubei</td><td>Trade</td></tr>
  <tr><td>Hunan Province Department of Commerce</td><td>湖南省商务厅</td><td>1</td><td>Changsha</td><td>Trade</td></tr>
