--- a/index_psu.html
+++ b/index_psu.html
@@ -33,7 +33,7 @@
 <!–– add your tableizer data below this line––>
 
 
-<thead><tr class="tableizer-firstrow"><th>Professional Supervisory Unit</th><th>Chinese Name</th><th>Number of Organizations Sponsored</th><th>Registration Location</th><th>NGOs' Field of Work</th></tr></thead><tbody>
+<thead><tr class="tableizer-firstrow"><th>Professional Supervisory Unit</th><th>Chinese Name</th><th>Number of<br>Organizations<br>Sponsored</th><th>Registration Location</th><th>NGOs' Field of Work</th></tr></thead><tbody>
  <tr><td>Beijing Commission of Commerce</td><td>北京市商务委员会</td><td>3</td><td>Beijing</td><td>Trade</td></tr>
  <tr><td>Chonqing Bureau of Civil Affairs</td><td>重庆市民政局</td><td>1</td><td>Chongqing</td><td>Disabilities, Youth, Health, Civil Society Capacity-Building</td></tr>
  <tr><td>Gansu Department of Education</td><td>甘肃省教育厅</td><td>1</td><td>Gansu</td><td>Youth, Education</td></tr>
