--- a/index_tabletest.html
+++ b/index_tabletest.html
@@ -8,6 +8,56 @@
       <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 
       <style>
+        
+              @font-face {
+         font-family: 'DrukText';
+         src: url('../fonts/Druk-Medium-Web.woff');
+         font-weight: 500;
+         font-style: normal;
+       }
+       @font-face {
+         font-family: 'DrukText';
+         src: url('../fonts/Druk-MediumItalic-Web.woff');
+         font-weight: 500;
+         font-style: italic;
+       }
+       @font-face {
+         font-family: 'DrukText';
+         src: url('../fonts/Druk-Bold-Web.woff');
+         font-weight: 700;
+         font-style: normal;
+       }
+       @font-face {
+         font-family: 'DrukText';
+         src: url('../fonts/Druk-BoldItalic-Web.woff');
+         font-weight: 700;
+         font-style: italic;
+       }
+
+      @font-face {
+        font-family: 'PortraitText';
+        src: url('../fonts/Portrait-Regular-Web.woff');
+        font-weight: 400;
+        font-style: normal;
+      }
+      @font-face {
+        font-family: 'PortraitText';
+        src: url('../fonts/Portrait-RegularItalic-Web.woff');
+        font-weight: 400;
+        font-style: italic;
+      }
+      @font-face {
+        font-family: 'PortraitText';
+        src: url('../fonts/Portrait-Medium-Web.woff');
+        font-weight: 500;
+        font-style: normal;
+      }
+      @font-face {
+        font-family: 'PortraitText';
+        src: url('../fonts/Portrait-MediumItalic-Web.woff');
+        font-weight: 500;
+        font-style: italic;
+      }
 
         table.sortable thead {
             background-color:#eee;
