--- a/index_tabletest.html
+++ b/index_tabletest.html
@@ -62,6 +62,7 @@
         table.sortable thead {
             background-color:#eee;
             color:#000000;
+            font-family: 'PortraitText';
             font-weight: bold;
             font-size: 16px;
             cursor: default;
@@ -69,7 +70,7 @@
 
         table.sortable {
       		font-size: 12px;
- 
+          font-family: 'PortraitText';
       	}
 
         table.sortable {border-spacing: 0}
