--- a/index_tabletest.html
+++ b/index_tabletest.html
@@ -62,9 +62,10 @@
         table.sortable thead {
             background-color:#eee;
             color:#000000;
-            font-family: 'PortraitText';
+            font-family: 'DrukText';
             font-weight: bold;
             font-size: 16px;
+            font-stretch: expanded;
             cursor: default;
         }
 
