--- a/index_tabletest.html
+++ b/index_tabletest.html
@@ -62,10 +62,9 @@
         table.sortable thead {
             background-color:#eee;
             color:#000000;
-            font-family: 'DrukText';
+            font-family: 'PortraitText';
             font-weight: bold;
-            font-size: 16px;
-            font-stretch: expanded;
+            font-size: 18px;
             cursor: default;
         }
 
